# tsk

./: .clippy.toml  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  justfile  release-plz.toml  tsk-integ-test.sh
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/commands/: testcommand.md
.github/workflows/: release-plz.yml  rust.yml
.tsk/: tsk.toml
.tsk/dockerfiles/project/: tsk.dockerfile
.tsk/templates/: feat.md  fix.md  refactor.md
dockerfiles/agent/: claude-code.dockerfile  claude.dockerfile  codex.dockerfile  integ.dockerfile  no-op.dockerfile
dockerfiles/agent/claude/: Dockerfile
dockerfiles/base/: Dockerfile  default.dockerfile
dockerfiles/project/default/: Dockerfile
dockerfiles/stack/: go.dockerfile  java.dockerfile  lua.dockerfile  node.dockerfile  python.dockerfile  rust.dockerfile
dockerfiles/tech-stack/default/: Dockerfile
dockerfiles/tech-stack/go/: Dockerfile
dockerfiles/tech-stack/lua/: Dockerfile
dockerfiles/tech-stack/python/: Dockerfile
dockerfiles/tech-stack/rust/: Dockerfile
dockerfiles/tsk-base/: Dockerfile  entrypoint.sh  init-firewall.sh
dockerfiles/tsk-proxy/: Dockerfile  entrypoint.sh  squid.conf
docs/: SAFETY_TESTING.md  docker-builds.md  network-isolation.md  skill-marketplace.md  task-lifecycle.md
docs/plans/: 2025-01-12-container-engine-agnostic-design.md  2025-01-12-container-engine-agnostic-impl.md
scripts/: integration-test.sh  network-isolation-test.sh
skills/tsk-add/.claude-plugin/: plugin.json
skills/tsk-config/.claude-plugin/: plugin.json
skills/tsk-help/.claude-plugin/: plugin.json
src/: display.rs  docker.rs  file_system.rs  git.rs  git_operations.rs  git_sync.rs  lib.rs  log_processor.rs  main.rs  notifications.rs  repo_utils.rs  repository.rs  sqlite_task_storage.rs  stdin_utils.rs  task.rs  task_builder.rs  task_manager.rs  task_runner.rs  task_storage.rs  terminal.rs  utils.rs
src/agent/: claude.rs  claude_code.rs  codex.rs  integ.rs  log_line.rs  log_processor.rs  mod.rs  no_op.rs  no_op_log_processor.rs  provider.rs  task_logger.rs  task_result.rs  tests.rs
src/assets/: embedded.rs  filesystem.rs  frontmatter.rs  layered.rs  mod.rs  tests.rs  utils.rs
src/client/: mod.rs
src/commands/: add.rs  cancel.rs  clean.rs  debug.rs  delete.rs  docker_build.rs  list.rs  mod.rs  quick.rs  retry.rs  review.rs  run.rs  shell.rs  stop_proxy.rs  stop_server.rs  task_args.rs  tasks.rs  templates.rs  tests.rs  wait.rs
src/container/: cleanup.rs  engine.rs  mod.rs
src/context/: config.rs  docker_client.rs  file_system.rs  file_system_tests.rs  git_operations.rs  mod.rs  notifications.rs  repository_context.rs  task_storage.rs  terminal.rs  tests.rs  tsk_client.rs  tsk_config.rs  tsk_env.rs
src/docker/: build_lock_manager.rs  composer.rs  image_manager.rs  layers.rs  mod.rs  proxy_manager.rs  seccomp_dind.json  template_engine.rs  template_manager.rs
src/server/: executor.rs  lifecycle.rs  mod.rs  protocol.rs  scheduler.rs  worker_pool.rs
src/storage/: mod.rs  utils.rs  xdg.rs
src/test_utils/: docker_clients.rs  git_test_helpers.rs  git_test_utils.rs  mod.rs  tsk_clients.rs
src/tui/: app.rs  events.rs  input.rs  mod.rs  run.rs  ui.rs
templates/: ack.md  doc.md  feat.md  feature.md  fix.md  plan.md  project-layer.md  refactor.md  shell.md  tech-stack.md  tsk-review.md
tests/: test_layered_templates.rs
(+48 files in other folders)
