[package]
name = "tsk-ai"
version = "0.2.0"
edition = "2024"
authors = ["Danny Tormoen <dtormoen@gmail.com>"]
description = "AI-powered development task delegation and sandboxing tool"
repository = "https://github.com/dtormoen/tsk"
homepage = "https://github.com/dtormoen/tsk"
license = "MIT"
readme = "README.md"

[lib]
name = "tsk"
path = "src/lib.rs"

[[bin]]
name = "tsk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bollard = "0.16"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.16"
anyhow = "1.0"
git2 = { version = "0.20.2", default-features = false }
notify-rust = "4.11"
thiserror = "1.0"
libc = "0.2"
atty = "0.2"
rust-embed = { version = "8.0", features = ["debug-embed"] }
tempfile = "3.8"
tar = "0.4"
nanoid = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
