[package]
name = "tsk-ai"
version = "0.5.0"
edition = "2024"
authors = ["Danny Tormoen <dtormoen@gmail.com>"]
description = "AI-powered development task delegation and sandboxing tool"
repository = "https://github.com/dtormoen/tsk"
homepage = "https://github.com/dtormoen/tsk"
license = "MIT"
readme = "README.md"
default-run = "tsk"

[[bin]]
name = "tsk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bollard = "0.19"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
anyhow = "1.0"
git2 = { version = "0.20.2", default-features = false }
notify-rust = "4.11"
thiserror = "2.0"
libc = "0.2"
atty = "0.2"
termion = "4.0"
rust-embed = { version = "8.7", features = ["debug-embed"] }
tempfile = "3.21"
tar = "0.4"
nanoid = "0.4"
bytes = "1.9"
http-body-util = "0.1"
handlebars = "6.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
