[package]
name = "tsk-ai"
version = "0.9.0"
edition = "2024"
authors = ["Danny Tormoen <dtormoen@gmail.com>"]
description = "AI-powered development task delegation and sandboxing tool"
repository = "https://github.com/dtormoen/tsk"
homepage = "https://github.com/dtormoen/tsk"
license = "MIT"
readme = "README.md"
default-run = "tsk"

[[bin]]
name = "tsk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bollard = "0.20"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
git2 = { version = "0.20.3", default-features = false }
notify-rust = "4.11"
thiserror = "2.0"
libc = "0.2"
is-terminal = "0.4"
termion = "4.0"
rust-embed = { version = "8.11", features = ["debug-embed"] }
tempfile = "3.24"
tar = "0.4"
nanoid = "0.4"
bytes = "1.11"
http-body-util = "0.1"
handlebars = "6.4"
toml = "0.9"
rusqlite = { version = "0.35", features = ["bundled"] }
sha2 = "0.10"
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
